I think I fixed the navbar regression - should now be sticky on mobile, show when user scrolls up
I think I fixed the navbar regression - should now be sticky on mobile, show when user scrolls up

--- a/quartz/components/styles/navbar.scss
+++ b/quartz/components/styles/navbar.scss
@@ -187,7 +187,6 @@
     transition:
       transform 0.45s ease,
       opacity 0.45s ease;
-    position: sticky;
     z-index: 910;
 
     &.shadow {
